force-app/main/default/objects/Product__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows that product is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>