force-app/main/default/objects/Product__c/fields/Product_List_Items__c.field-meta.xml
<CustomField>
    <fullName>Product_List_Items__c</fullName>
    <label>Product List Items</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_list</valueSetName>
    </valueSet>
</CustomField>